--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,2 +1,10 @@
 load(":abl.bzl", "define_abl_targets")
+load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
+
+string_flag(
+    name = "target_build_variant",
+    values = ["userdebug", "user"],
+    build_setting_default = "userdebug",
+)
+
 define_abl_targets()
